stacks/prod/07-file-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
  namespace: prod
  labels:
    environment: prod
    app: swiftly
    service: file-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      environment: prod
      app: swiftly
      service: file-service
  template:
    metadata:
      labels:
        environment: prod
        app: swiftly
        service: file-service
    spec:
      containers:
        - name: file-service
          image: singhsays/swiftly-file-service:sha-16730b8
          volumeMounts:
            - mountPath: /data
              name: shared-data-pv
      restartPolicy: Always
      volumes:
        - name: shared-data-pv
          persistentVolumeClaim:
            claimName: shared-data-pvc
