stacks/prod/08-case-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: case-service
  namespace: prod
  labels:
    environment: prod
    app: swiftly
    service: case-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      environment: prod
      app: swiftly
      service: case-service
  template:
    metadata:
      labels:
        environment: prod
        app: swiftly
        service: case-service
    spec:
      containers:
        - name: case-service
          image: singhsays/swiftly-case-service:sha-613fee0
          volumeMounts:
            - mountPath: /data
              name: shared-data-volume-pv
      restartPolicy: Always
      volumes:
        - name: shared-data-volume-pv
          persistentVolumeClaim:
            claimName: shared-data-volume-pvc
