stacks/prod/09-content-classifier.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-classifier
  namespace: prod
  labels:
    environment: prod
    app: swiftly
    service: content-classifier
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      environment: prod
      app: swiftly
      service: content-classifier
  template:
    metadata:
      labels:
        environment: prod
        app: swiftly
        service: content-classifier
    spec:
      containers:
        - name: content-classifier
          image: singhsays/swiftly-content-classifier:sha-18d6d09
          volumeMounts:
            - mountPath: /data
              name: shared-data-volume-pv
      restartPolicy: Always
      volumes:
        - name: shared-data-volume-pv
          persistentVolumeClaim:
            claimName: shared-data-volume-pvc
