stacks/prod/10-model-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service
  namespace: prod
  labels:
    environment: prod
    app: swiftly
    service: model-service
spec:
  replicas: 8
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      environment: prod
      app: swiftly
      service: model-service
  template:
    metadata:
      labels:
        environment: prod
        app: swiftly
        service: model-service
    spec:
      containers:
        - name: model-service
          image: singhsays/swiftly-model-service:sha-192de24
          volumeMounts:
            - mountPath: /data
              name: shared-data-volume-pv
      restartPolicy: Always
      volumes:
        - name: shared-data-volume-pv
          persistentVolumeClaim:
            claimName: shared-data-volume-pvc
